--- a/web/static/scss/_admin.scss
+++ b/web/static/scss/_admin.scss
@@ -1466,6 +1466,7 @@
 }
 
 .form-hint {
+  display: block;
   font-size: $font-size-xs;
   color: $gray-500;
   margin-top: $spacing-1;
